--- a/scirpts/besttutors.css
+++ b/scirpts/besttutors.css
@@ -41,7 +41,7 @@ body{
 }*/
 #img1{
     float: left;
-    width: 50%;
+    width: 80%;
 }
 #BulletedList1{
     text-align: left;
@@ -71,6 +71,7 @@ body{
 #TeachandStudentpic {
     width: 300px;
     height: 190px;
+    padding-right: 20px;
 }
 #emaillegend{
     font-size: 200%;
