--- a/scirpts/besttutors.css
+++ b/scirpts/besttutors.css
@@ -15,6 +15,9 @@ body{
     background-color:antiquewhite;
     height: 100%;
 }
+tr{
+    width: 100%;
+}
 #label1{
     font-size: x-large;
 }
@@ -46,7 +49,7 @@ body{
 #BulletedList1{
     text-align: left;
     float: left;
-    margin-left: 100px;
+    margin-left: 40px;
 }
 #picTD {
     width: 45%;
@@ -57,9 +60,9 @@ body{
     height: auto;
 }
 #img2 {
-    float: right;
-    width: 30%;
-    height: 220px;
+    width: 99%;
+    height: 190px;
+    padding-left: 10px;
 }
 #Label2 {
     float: left;
